--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Shubhojyoti Ganguly
 description: Roboticist
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://raw.githubusercontent.com/sgang007/sgang007.github.io/master/images/term_wall.jpg
 
 #
 # Flags below are optional
