--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Shubhojyoti Ganguly
 
 # Short bio or description (displayed in the header)
-description: Roboticist
+description: Free thinker and Innovator
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/sgang007/sgang007.github.io/master/images/term_wall.jpg
