--- a/_config.yml
+++ b/_config.yml
@@ -23,10 +23,10 @@ footer-links:
   flickr: 
   github: sgang007
   instagram: 
-  linkedin: 
+  linkedin: shubhojyotiganguly
   pinterest: 
-  rss: # just type anything here for a working RSS icon, make sure you set the "url" above!
-  twitter: 
+  rss: ganguly-blog# just type anything here for a working RSS icon, make sure you set the "url" above!
+  twitter: sgang007
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
 
 # Your disqus shortname, entering this will enable commenting on posts
@@ -37,7 +37,7 @@ google_analytics: UA-59165025-1
 
 # Your website URL (e.g. http://barryclark.github.io or #http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-url: 
+url: http://sgang007.github.io
 
 # If you're hosting your site at a Project repository on GitHub pages 
 # (http://yourusername.github.io/repository-name)
