--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ footer-links:
   instagram: 
   linkedin: shubhojyotiganguly
   pinterest: 
-  rss: ganguly-blog# just type anything here for a working RSS icon, make sure you set the "url" above!
+  rss: ganguly-blog 
   twitter: sgang007
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
 
