--- a/_config.yml
+++ b/_config.yml
@@ -56,6 +56,9 @@ permalink: /:title/
 # The release of Jekyll Now that you're using
 version: v1.0.0
 
+#Enable Pagination - limit the number of posts per page
+paginate: 5
+
 # Set the Sass partials directory, as we're using @imports
 sass:
   sass_dir: _scss
