--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: Shubhojyoti Ganguly
+name: The Bitter Truth
 
 # Short bio or description (displayed in the header)
-description: Free thinker and Innovator
+description: Shubhojyoti Ganguly
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/sgang007/sgang007.github.io/master/images/term_wall.jpg
